<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f4ecec">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_gravity="center"
            android:id="@+id/tv_title"
            style="@style/style_18_BEBEBE_BOLD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="注 册" />
      <!--  <TextView
            android:id="@+id/registrt_head_back_text"
            style="@style/style_15_EBEBEB_BOLD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/head_back"
            android:gravity="center"
            android:text="返  回" />-->
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/register_editor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="10.0dip"
        android:layout_marginBottom="80.0dip"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/biq"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textColor="@color/black"
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:hint="@string/username"
                android:textColorHint="#999999"
                android:imeOptions="actionNext"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textColor="@color/black"
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:hint="@string/pwd"
                android:textColorHint="#999999"
                android:inputType="numberPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pwd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textColor="@color/black"
                android:id="@+id/et_pwd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:hint="@string/pwd2"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_regist"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/register_btn_selector"
            android:text="@string/regist"
            android:textColor="#ffffff"
            android:textSize="14sp"/>

    </LinearLayout>



</RelativeLayout>